# toc-eda

./: .gitignore  README.md  compass_analysis_demo.py  create_circuit_features_csv.py  pyproject.toml  rename_circuit_files.py
data/: labels2.json  labels3.json
data/processed/: test2_circuit_features.csv
outputs/: .gitkeep
src/: __init__.py  calculate_scores.py  data_loader.py  export_features_csv.py  visualize_scores.py
tests/: basic_visualization.py  metric_rel_visualization.py  pca_alignment.py
